# src/Elsa/Workflows/Runtime/Api/Requests/WorkflowActivationSlotInspectionRequests.cs
@@ -1,0 +1,5 @@
+namespace Elsa.Workflows.Runtime.Api.Requests;
+
+public sealed record ListWorkflowActivationSlots(string DefinitionId);
+
+public sealed record GetWorkflowActivationSlot(string DefinitionId, string SlotName);
